[master]: Update app configuration and dependencies in  `build.gradle` files.

--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,9 @@ task clean(type: Delete) {
 ext {
     supportLibsVersion = '27.1.1'
     constraintLayoutVersion = "1.0.2"
-    multiDexVersion = "1.0.1"
+    multiDexVersion = "1.0.3"
     archComponetsVersion = '1.1.0'
-    playServicesVersion = "11.6.0"
+    playServicesVersion = "16.0.0"
     dagger2Version = "2.20"
     gsonVersion = "2.8.1"
     retrofitVersion = "2.5.0"
@@ -58,59 +58,63 @@ ext {
     FirabaseVersion = "11.6.0"
     IconifyVersion = "2.1.0"
     GuavaVersion = "19.0"
+    navigationVersion = "1.0.0-alpha08"
 
     appDependencies = [
-            ConstraintLayout      : "com.android.support.constraint:constraint-layout:${constraintLayoutVersion}",
-            MultiDex              : "com.android.support:multidex:${multiDexVersion}",
-            SupportV4             : "com.android.support:support-v4:${supportLibsVersion}",
-            AppCompatV7           : "com.android.support:appcompat-v7:${supportLibsVersion}",
-            CardViewV7            : "com.android.support:cardview-v7:${supportLibsVersion}",
-            CustomTabs            : "com.android.support:customtabs:${supportLibsVersion}",
-            SupportDesign         : "com.android.support:design:${supportLibsVersion}",
-            ArchRoomRuntime       : "android.arch.persistence.room:runtime:${archComponetsVersion}",
-            ArchRoomRxJava2       : "android.arch.persistence.room:rxjava2:${archComponetsVersion}",
-            PlayServicesMaps      : "com.google.android.gms:play-services-maps:${playServicesVersion}",
-            PlayServicesLocation  : "com.google.android.gms:play-services-location:${playServicesVersion}",
-            GcmPlayServices       : "com.google.android.gms:play-services-gcm:${playServicesVersion}",
-            Dagger2               : "com.google.dagger:dagger:${dagger2Version}",
-            Dagger2Compiler       : "com.google.dagger:dagger-compiler:${dagger2Version}",
-            DaggerAndroid           : "com.google.dagger:dagger-android:${dagger2Version}",
-            DaggerAndroidSupport    : "com.google.dagger:dagger-android-support:${dagger2Version}",
-            DaggerAndroidProcessor  : "com.google.dagger:dagger-android-processor:${dagger2Version}",
-            Gson                  : "com.google.code.gson:gson:${gsonVersion}",
-            Retrofit              : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
-            RetrofitConverterGson : "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
-            RetrofitAdapterRxJava2: "com.squareup.retrofit2:adapter-rxjava2:${retrofitVersion}",
-            OkHttp                : "com.squareup.okhttp3:okhttp:${okHttpVersion}",
-            OkHttpInterceptor     : "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}",
-            Picasso               : "com.squareup.picasso:picasso:${picassoVersion}",
-            RxJava2               : "io.reactivex.rxjava2:rxjava:${rxjava2Version}",
-            RxAndroid             : "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}",
-            FacebookSDK           : "com.facebook.android:facebook-android-sdk:${facebookSdkVersion}",
-            JodaTime              : "net.danlew:android.joda:${jodaTimeVersion}",
-            Fonty                 : "com.github.MarcinOrlowski:fonty:${fontyVersion}",
-            CountLySdk            : "ly.count.android:sdk:${countLySdkVersion}",
-            CommonsCodec          : "commons-codec:commons-codec:${commonsCodecVersion}",
-            ViewPagerIndicator    : "com.github.JakeWharton:ViewPagerIndicator:${viewPagerIndicatorVersion}",
-            CoreEngine            : "coreEngine_release_${coreEngineVersion}",
-            RoomCompiler          : "android.arch.persistence.room:compiler:${archComponetsVersion}",
-            SafeRoom              : "com.commonsware.cwac:saferoom:${safeRoomVersion}",
-            androidLifeCycle      : "android.arch.lifecycle:extensions:$archComponetsVersion",
-            androidLifeCycleTest  : "android.arch.core:core-testing:$archComponetsVersion",
-            KotlinStdLib          : "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}",
-            AndroidDatabinding    : "com.android.databinding:compiler:${AndroidDataBindingVersion}",
-            FirabaseCore          : "com.google.firebase:firebase-core:${FirabaseVersion}",
-            FirabaseCoreMessaging : "com.google.firebase:firebase-messaging:${FirabaseVersion}",
-            IconifyFontAwesome    : "com.joanzapata.iconify:android-iconify-fontawesome:${IconifyVersion}",
-            IconifyEntypo         : "com.joanzapata.iconify:android-iconify-entypo:${IconifyVersion}",
-            IconifyMaterial       : "com.joanzapata.iconify:android-iconify-material:${IconifyVersion}",
-            Guava                 : "com.google.guava:guava:${GuavaVersion}",
-            JUnit                 : "junit:junit:${jUnitVersion}",
-            Mockito               : "org.mockito:mockito-core:${mockitoVersion}",
-            MockitoKotlin         : "com.nhaarman:mockito-kotlin:${mockitokotlinVersion}",
-            KotlinReflect         : "org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}",
-            EspressoCore          : "com.android.support.test.espresso:espresso-core:${espressoCoreVersion}",
-            androidRecyclerView   : 'com.android.support:recyclerview-v7:' + supportLibsVersion,
+            ConstraintLayout            : "com.android.support.constraint:constraint-layout:${constraintLayoutVersion}",
+            MultiDex                    : "com.android.support:multidex:${multiDexVersion}",
+            SupportV4                   : "com.android.support:support-v4:${supportLibsVersion}",
+            AppCompatV7                 : "com.android.support:appcompat-v7:${supportLibsVersion}",
+            CardViewV7                  : "com.android.support:cardview-v7:${supportLibsVersion}",
+            CustomTabs                  : "com.android.support:customtabs:${supportLibsVersion}",
+            SupportDesign               : "com.android.support:design:${supportLibsVersion}",
+            ArchRoomRuntime             : "android.arch.persistence.room:runtime:${archComponetsVersion}",
+            ArchRoomRxJava2             : "android.arch.persistence.room:rxjava2:${archComponetsVersion}",
+            PlayServicesBase           : "com.google.android.gms:play-services-base:${playServicesVersion}",
+            PlayServicesMaps            : "com.google.android.gms:play-services-maps:${playServicesVersion}",
+            PlayServicesLocation        : "com.google.android.gms:play-services-location:${playServicesVersion}",
+            GcmPlayServices             : "com.google.android.gms:play-services-gcm:${playServicesVersion}",
+            Dagger2                     : "com.google.dagger:dagger:${dagger2Version}",
+            Dagger2Compiler             : "com.google.dagger:dagger-compiler:${dagger2Version}",
+            DaggerAndroid               : "com.google.dagger:dagger-android:${dagger2Version}",
+            DaggerAndroidSupport        : "com.google.dagger:dagger-android-support:${dagger2Version}",
+            DaggerAndroidProcessor      : "com.google.dagger:dagger-android-processor:${dagger2Version}",
+            Gson                        : "com.google.code.gson:gson:${gsonVersion}",
+            Retrofit                    : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
+            RetrofitConverterGson       : "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
+            RetrofitAdapterRxJava2      : "com.squareup.retrofit2:adapter-rxjava2:${retrofitVersion}",
+            OkHttp                      : "com.squareup.okhttp3:okhttp:${okHttpVersion}",
+            OkHttpInterceptor           : "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}",
+            Picasso                     : "com.squareup.picasso:picasso:${picassoVersion}",
+            RxJava2                     : "io.reactivex.rxjava2:rxjava:${rxjava2Version}",
+            RxAndroid                   : "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}",
+            FacebookSDK                 : "com.facebook.android:facebook-android-sdk:${facebookSdkVersion}",
+            JodaTime                    : "net.danlew:android.joda:${jodaTimeVersion}",
+            Fonty                       : "com.github.MarcinOrlowski:fonty:${fontyVersion}",
+            CountLySdk                  : "ly.count.android:sdk:${countLySdkVersion}",
+            CommonsCodec                : "commons-codec:commons-codec:${commonsCodecVersion}",
+            ViewPagerIndicator          : "com.github.JakeWharton:ViewPagerIndicator:${viewPagerIndicatorVersion}",
+            CoreEngine                  : "coreEngine_release_${coreEngineVersion}",
+            RoomCompiler                : "android.arch.persistence.room:compiler:${archComponetsVersion}",
+            SafeRoom                    : "com.commonsware.cwac:saferoom:${safeRoomVersion}",
+            androidLifeCycle            : "android.arch.lifecycle:extensions:$archComponetsVersion",
+            androidLifeCycleTest        : "android.arch.core:core-testing:$archComponetsVersion",
+            KotlinStdLib                : "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}",
+            AndroidDatabinding          : "com.android.databinding:compiler:${AndroidDataBindingVersion}",
+            FirabaseCore                : "com.google.firebase:firebase-core:${FirabaseVersion}",
+            FirabaseCoreMessaging       : "com.google.firebase:firebase-messaging:${FirabaseVersion}",
+            IconifyFontAwesome          : "com.joanzapata.iconify:android-iconify-fontawesome:${IconifyVersion}",
+            IconifyEntypo               : "com.joanzapata.iconify:android-iconify-entypo:${IconifyVersion}",
+            IconifyMaterial             : "com.joanzapata.iconify:android-iconify-material:${IconifyVersion}",
+            Guava                       : "com.google.guava:guava:${GuavaVersion}",
+            JUnit                       : "junit:junit:${jUnitVersion}",
+            Mockito                     : "org.mockito:mockito-core:${mockitoVersion}",
+            MockitoKotlin               : "com.nhaarman:mockito-kotlin:${mockitokotlinVersion}",
+            KotlinReflect               : "org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}",
+            EspressoCore                : "com.android.support.test.espresso:espresso-core:${espressoCoreVersion}",
+            androidRecyclerView         : 'com.android.support:recyclerview-v7:' + supportLibsVersion,
+            androidNavigationFragmentKtx: "android.arch.navigation:navigation-fragment-ktx:${navigationVersion}",
+            androidNavigationUiKtx      : "android.arch.navigation:navigation-ui-ktx:${navigationVersion}"
 
     ]
 }
