--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -27,26 +28,26 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
     implementation 'androidx.core:core-ktx:1.1.0-alpha03'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
 
+    implementation appDependencies.SupportDesign
     implementation appDependencies.Dagger2
-//    implementation dependencies.DaggerAndroid
     implementation dependencies.DaggerAndroidSupport
-
     implementation dependencies.Gson
     implementation dependencies.Picasso
     implementation dependencies.Retrofit
     implementation dependencies.RetrofitConverterGson
-
-
     implementation appDependencies.androidLifeCycle
     implementation appDependencies.androidRecyclerView
+    implementation appDependencies.androidNavigationFragmentKtx
+    implementation appDependencies.androidNavigationUiKtx
+    implementation appDependencies.PlayServicesMaps
 
     kapt dependencies.Dagger2Compiler
     kapt dependencies.DaggerAndroidProcessor
