--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,14 +27,13 @@ dependencies {
     def dependencies = rootProject.ext.appDependencies
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
     implementation 'androidx.core:core-ktx:1.1.0-alpha03'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-
 
     implementation appDependencies.SupportDesign
     implementation appDependencies.Dagger2
@@ -48,10 +47,11 @@ dependencies {
     implementation appDependencies.androidNavigationFragmentKtx
     implementation appDependencies.androidNavigationUiKtx
     implementation appDependencies.PlayServicesMaps
+    implementation appDependencies.androidxRoomRuntime
 
     kapt dependencies.Dagger2Compiler
     kapt dependencies.DaggerAndroidProcessor
-    kapt appDependencies.RoomCompiler
+    kapt appDependencies.androidxRoomCompiler
     implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha11'
 
 }
